# ml_python_package

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  infer.py  models.dvc  pyproject.toml  tfdf_models.dvc  train.py
.dvc/: config
configs/: config.yaml
mlops_project/: infer_rfr.py  train_rfr.py
wine_quality/: infer_rfr.py  train_rfr.py
