[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Sergei Prilutskii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dvc = "^3.36.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
