[tool.poetry]
name = "mlops_project"
version = "0.1.0"
description = ""
authors = ["Sergei Prilutskii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
dvc = "^3.36.0"
dvc-gdrive = "^3.0.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
hydra-core = "^1.3.2"
tensorflow = "2.13"
tensorflow-macos = {version = "2.13", markers = "platform_system == \"Darwin\" and platform_machine == \"arm64\""}
tensorflow-decision-forests = "1.5"
mlflow = "^2.9.2"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
