[tool.poetry]
name = "wine_quality"
version = "0.1.0"
description = ""
authors = ["Sergei Prilutskii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
dvc = "^3.36.0"
dvc-gdrive = "^3.0.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
hydra-core = "^1.3.2"
mlflow = "^2.9.2"
skops = "^0.9.0"
tensorboard = "^2.15.1"
tensorboardx = "^2.6.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
